<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    tools:context=".ChangeContactActivity">

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/CCAbOK"
        >

        <RadioButton
            android:id="@+id/CCArb1"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/CCArb2"
            android:text="@string/RB1"
            />

        <RadioButton
            android:id="@+id/CCArb2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toBottomOf="@id/CCArb1"
            app:layout_constraintBottom_toTopOf="@id/CCArb3"
            android:text="@string/RB2" />

        <RadioButton
            android:id="@+id/CCArb3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toBottomOf="@id/CCArb2"
            app:layout_constraintBottom_toTopOf="@id/CCArb4"
            android:text="@string/RB3" />

        <RadioButton
            android:id="@+id/CCArb4"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toBottomOf="@id/CCArb3"
            app:layout_constraintBottom_toTopOf="@id/CCArb5"
            android:text="@string/RB4" />

        <RadioButton
            android:id="@+id/CCArb5"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toBottomOf="@id/CCArb4"
            app:layout_constraintBottom_toTopOf="@id/CCAbCancel"
            android:text="@string/RB5" />
    </RadioGroup>

    <Button
        android:id="@+id/CCAbCancel"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/CCACancel"
        android:onClick="nosetContact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/CCAbOK" />

    <Button
        android:id="@+id/CCAbOK"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/CCAOK"
        android:onClick="setContact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/CCAbCancel"
        />

</android.support.constraint.ConstraintLayout>